# aureon-trading

./: .aureon_heartbeat  .env  .env.example  .env1.txt  .gitignore  .kraken_nonce  7day_adaptive_weights.json  7day_current_plan.json  7day_pending_validations.json  7day_validation_history.json  AGENTS.md  ARCHITECTURE.md  AUDIT_SUMMARY.md  AUREON_ANSWERS_REPORT.md  AUREON_BENCHMARK_ANALYSIS.md  AUREON_DATA_OCEAN.cmd  AUREON_DATA_OCEAN.ps1  AUREON_HARMONIC_ALPHABET_EXPANSION.md  AUREON_MIND_STATUS.md  AUREON_PRODUCTION_LIVE.cmd  AUREON_WAKE_UP_FULL_AUTONOMOUS.cmd  AUREON_WAKE_UP_FULL_AUTONOMOUS.ps1  AUREON_WHITE_PAPER_RESEARCH_HUB.md  AUREON_WINDOWS_COMMAND_CHEAT_SHEET.md  BINANCE_STREAMING_INTEGRATION.md  CAPABILITIES.md  CELTIC_WARFARE_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COHERENCE_ENGINE_SETUP.md  COMPANY.md  CONERR$  CONTRIBUTING.md  DATA_FLOW.md  DIGITALOCEAN_DEPLOY.md  Dockerfile  EARTH_QUICKSTART.md  EVERYTHING_CODEX_CAN_DO.md  (+955 more)
.clawdhub/: lock.json
.do/: app.yaml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.well-known/: aureon-mount.json
1_substrate/: README.md
2_dynamics/: README.md  __init__.py
3_forcing/: README.md
4_output/: README.md
Aueron-Trading-Quantum-Quackers-War-Ready-Version--alert-autofix-gl1/: .gitignore  APIKeyManager.tsx  AQTS_System_Architecture.md  App.tsx  AureonChart.tsx  AureonReportCard.tsx  COMMAND_REFERENCE.txt  ChartContainer.tsx  ChatPanel.tsx  CoherenceTrajectoryChart.tsx  DrivingForcesChart.tsx  GO_LIVE_NOW.md  HARMONIC_LOOP_VALIDATION.md  Header.tsx  LIGHTHOUSE_ABLATION.md  LION_QUICK_REF.txt  LIVE_ARCHITECTURE.txt  LIVE_DEPLOYMENT_STATUS.md  LIVE_TRADING_START.js  LandingPage.tsx  Loader.tsx  MonitoringPanel.tsx  PRODUCTION_DEPLOYMENT.md  QUICKREF.txt  RAINBOW_QUICKSTART.md  README.md  ReportCard.tsx  SporeConcentrationChart.tsx  TESTNET_SETUP.md  THE_RECOGNITION.md  TechnologyRoadmap.tsx  TradeNotification.tsx  TradingConsole.tsx  aureonService.ts  aureon_baseline_results.json  backtest_trades.csv  ecosystem.config.js  geminiService.ts  hive_baseline.json  index.css  (+14 more)
Kings_Accounting_Suite/: AUREON_SYSTEM_MAP.md  requirements.txt
META/: CATALOG.json  CROSS_REFERENCES.md  DOMAIN_MAP.md  FILE_INDEX.md  PATH_REGISTRY.py
NEXUS-LIVE-FEED--main/: .env.sample  README.md  activate_harmonic_nexus_core.py  celestial_cartography.py  package-lock.json  package.json  record_threat.py  run_pulse_modulator.py  solar_pulse_modulator.py  verify_file_io.py
RAINBOW-main/: README.md
VERIFICATION AND VALIDATION/: MATRIX VERIFICATION.docx
archive/: crash_log.txt  kraken_margin_penny_trader.py.bak  orca_live_trading.log.pre_test_20260218_222402
aureon/: __init__.py  analyze_actual_vs_expected_costs.py  aureon_atn_command_center.py  aureon_atn_monitor.py  aureon_bot_hunter_dashboard.py  aureon_bot_intelligence_profiler.py  aureon_conversion_commando.py  aureon_enhancements.py  aureon_global_orchestrator.py  aureon_harmonic_liquid_aluminium.py  aureon_harmonic_reality.py  aureon_infinite.py  aureon_knowledge_base.py  aureon_kraken_ecosystem.py  aureon_kraken_unified_signal_bridge.py  aureon_ladder_climber.py  aureon_lyra_vision_bridge.py  aureon_margin_harmonic_scanner.py  aureon_master_launcher.py  aureon_memory_core.py  aureon_operational_core.py  aureon_plums_guardian.py  aureon_quantum_goal_engine.py  aureon_queen_true_consciousness.py  aureon_queen_unified_startup.py  aureon_rising_star_logic.py  aureon_space_weather_bridge.py  aureon_standalone_health_checker.py  aureon_surveillance_dashboard.py  aureon_system_hub_cli.py  aureon_the_play_old.py  aureon_truth_prediction_bridge.py  aureon_unified_live.py  aureon_unified_power_system.py  aureon_whale_profiler_system.py  aureon_wisdom_scanner.py  aureon_world_simulator.py  auto_sniper.py  backtest_sentiment_oracle.py  billion_projection.py  (+25 more)
aureon_launcher/: README.md  aureon.spec  build.bat  credentials.py  launcher.py  setup_wizard.py
cli/: __init__.py  config_manager.py  dashboard.py  launcher.py  setup_wizard.py  trading_runtime.py
data/: de440_ephemeris.csv  de440_gate3_lag_corr.csv  margin_goal_proof_test.jsonl  portfolio_thoughts.jsonl  radar_ephem_skyfield_de440.csv  real_data_sources.json  sim_kp.csv  test_thoughts.jsonl
deploy/: docker-compose.operator.yml  docker-compose.saas.yml  env.example  operator.Dockerfile  orca-kill-cycle.service  start_orca.sh  start_queen.sh  supervisord.conf  supervisord.linux.conf  validate_startup.sh
docs/: BINANCE_ALGO_API_REFERENCE.txt  BROKER_TEMPO_GUIDE.md  CAPABILITY_REGISTRY.md  CLAIMS_AND_EVIDENCE.md  COMPLETE_PREDICTIVE_SYSTEMS_MAP.md  CONTRIBUTING.md  DASHBOARD_INTEGRATION_GUIDE.md  DIGITALOCEAN_NO_DATA_FIX.md  END_USER_ACCESS_MAP.md  FIX_TRADING_SYSTEM.md  GREEN_OLIVE_EXPANSION_COMPLETE.md  HNC_FALSIFICATION_PROTOCOL.md  HNC_UNIFIED_WHITE_PAPER.md  INDEX.md  README.md  (+43 more)
(+9541 files in other folders)
